--- a/L1/a-taste-of-python.ipynb
+++ b/L1/a-taste-of-python.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -42,7 +42,7 @@
        "2"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -69,7 +69,7 @@
        "35"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -146,7 +146,7 @@
        "0.7071067811865475"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -268,7 +268,7 @@
        "0.052335956242943835"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -295,7 +295,7 @@
        "4.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -340,7 +340,7 @@
        "3.141592653589793"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 44,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -402,7 +402,7 @@
        "0.05480366514878953"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 51,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -656,27 +656,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "surface_temp = 15.0\n",
+    "print (surface_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -690,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -702,8 +699,22 @@
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'surface' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[43msurface\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'surface' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print (surface)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -716,16 +727,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -743,8 +744,20 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[50.0, 48.2, 46.4, 44.6, 42.8, 41.0, 39.2, 37.4, 35.6, 33.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (temp_celsius)\n",
+    "print (temp_fahrenheit)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -805,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -814,8 +827,30 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hot\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weatherForecast = \"Hot\"\n",
+    "print (weatherForecast)\n",
+    "type(weatherForecast)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -826,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -838,8 +873,22 @@
      "raises-exception"
     ]
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tempFahrenheit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tempFahrenheit \u001b[38;5;241m=\u001b[39m \u001b[43mtempFahrenheit\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5.0\u001b[39m \u001b[38;5;241m*\u001b[39m weatherForecast\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tempFahrenheit' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tempFahrenheit = tempFahrenheit + 5.0 * weatherForecast"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -871,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 60,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -881,10 +930,35 @@
      "remove_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50.0, 48.2, 46.4, 44.6, 42.8, 41.0, 39.2, 37.4, 35.6, 33.8]\n",
+      "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "33.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Use this cell to enter your solution.\n"
+    "# Use this cell to enter your solution.\n",
+    "\n",
+    "print(temp_fahrenheit)\n",
+    "print(temp_celsius)\n",
+    "\n",
+    "for tempfahr in temp_fahrenheit:\n",
+    "    (tempfahr - temp)\n",
+    "\n",
+    "print (tempfahr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
